alteração na ideia do projeto, vamos cadastrar uma pessoa

--- a/agenda-mvc-thymeleaf/src/main/resources/templates/index.html
+++ b/agenda-mvc-thymeleaf/src/main/resources/templates/index.html
@@ -2,13 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>Good Thymes Virtual Grocery</title>
+	<title>Home</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="stylesheet" type="text/css" media="all" href="../../css/gtvg.css" th:href="@{/css/gtvg.css}" />
 </head>
 
 <body>
-	<p th:text="#{home.welcome}">Welcome to our grocery store!</p>
+	<p>Você esta em Home</p>
+	
+	
+	<a href="/">Home</a>
+	<a href="/cadastro">Cadastro</a>
 </body>
 
 </html>
